ドキュメントを作成

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,5 @@
 extends layout
 
 block content
-  h1 https://api.aicevote.com#{title}
-  for doc in docs
-    h2: a(href=title+doc.uri) #{title}#{doc.uri}
-    p= doc.description
-    if doc.req
-      h4 Request
-      for req in doc.req
-        p= req
-    if doc.res
-      h4 Response
-      for res in doc.res
-        p= res
-    if doc.method
-      h4 Example
-      pre: a(href=title+doc.uri+doc.query) #{doc.method} https://api.aicevote.com#{title}#{doc.uri}#{doc.query}
+  h1= title
+  p Welcome to #{title}
