--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,9 +4,8 @@ html
     title= title
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
-    article
-      block content
+    block content
     footer 
-      pre Glacier API - AICEVOTE API SERVER
-      pre made by 
-        a(href="https://twitter.com/yujixr") yuji
+      p Glacier API - AICEVOTE API SERVER
+      p Repository: 
+        a(href="https://github.com/AICEVOTE/GlacierAPI") https://github.com/AICEVOTE/GlacierAPI
