--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,4 +8,4 @@ html
     footer 
       p Glacier API - AICEVOTE API SERVER
       p Repository: 
-        a(href="https://github.com/AICEVOTE/GlacierAPI") https://github.com/AICEVOTE/GlacierAPI
+        a(href="https://github.com/aicevote/glacierapi.git") https://github.com/aicevote/glacierapi.git
