Theme search & notification

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,6 @@ html
   body
     block content
     footer 
-      p Glacier API - AICEVOTE API SERVER
+      p Glacier API - AICEVOTE API SERVER -
       p Repository: 
         a(href="https://github.com/aicevote/glacierapi.git") https://github.com/aicevote/glacierapi.git
